# dictm

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: README.md
notebooks/: exploration.ipynb
src/: __init__.py  cpt_builder.py  evaluate.py  inference.py  network_structure.py  preprocessing.py  structure_learning.py  visualize.py
tests/: conftest.py  test_cpt_builder.py  test_evaluate.py  test_inference.py  test_structure_learning.py
