[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"


[project]
name = "dictm"
version = "1.0.0"
description = "Supreme Court Case Outcome Prediction using Bayesian Networks"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]


[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
notebook = [
    "jupyter>=1.0",
]


[project.scripts]
dictm = "main:main"


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]


[tool.setuptools.packages.find]
include = ["src*"]